--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
   "require-dev": {
     "phpunit/phpunit": "~4.0|~5.0",
     "fzaninotto/faker": "~1.5.0",
-    "fabpot/php-cs-fixer": "~1.10"
+    "fabpot/php-cs-fixer": "~1.10",
+    "squizlabs/php_codesniffer": "2.*"
   },
   "autoload": {
     "psr-4": {
