--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,9 @@ before_script:
   - composer self-update
   - composer install --prefer-source
 
-script: vendor/bin/phpunit
+script:
+  - phpunit --coverage-text --coverage-clover=coverage.clover
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
