--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ php:
   - hhvm
   - nightly
 
+matrix:
+  allow_failures:
+    - php: nightly
+  fast_finish: true
+
 before_script:
   - composer self-update
   - composer install --prefer-source
