--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 script:
   - mkdir -p build/logs
   - if [ "$TRAVIS_PHP_VERSION" != "nightly" ]; then phpunit --coverage-clover build/logs/clover.xml; fi
-  - if [ "$TRAVIS_PHP_VERSION" != "nightly" ]; then phpunit; fi
+  - if [ "$TRAVIS_PHP_VERSION" == "nightly" ]; then phpunit; fi
 
 after_script:
   - if [ "$TRAVIS_PHP_VERSION" != "7.0" ] && [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi
