--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
   },
   "require": {
     "php": ">=5.4",
-    "ext-curl": "*",
-    "ext-simplexml": "*"
+    "ext-curl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0|~5.0",
