Make travis ci environemnt variable global.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ matrix:
   fast_finish: true
 
 env:
-  - BBB_SECURITY_SALT=8cd8ef52e8e101574e400365b55e11a6
-  - BBB_SERVER_BASE_URL=http://test-install.blindsidenetworks.com/bigbluebutton/
+  global:
+    - BBB_SECURITY_SALT=8cd8ef52e8e101574e400365b55e11a6
+    - BBB_SERVER_BASE_URL=http://test-install.blindsidenetworks.com/bigbluebutton/
 
 before_script:
   - wget http://getcomposer.org/composer.phar
