--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,9 +14,9 @@
 
     <php>
         <!-- Specify the value of your BigBlueButton security salt -->
-        <server name="BBB_SECURITY_SALT" value="8cd8ef52e8e101574e400365b55e11a6"/>
+        <env name="BBB_SECURITY_SALT" value="8cd8ef52e8e101574e400365b55e11a6"/>
         <!-- Specify the Server Base URL of your BigBlueButton -->
-        <server name="BBB_SERVER_BASE_URL" value="http://test-install.blindsidenetworks.com/bigbluebutton/"/>
+        <env name="BBB_SERVER_BASE_URL" value="http://test-install.blindsidenetworks.com/bigbluebutton/"/>
     </php>
 
     <log type="coverage-html" target="./coverage"
