--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,9 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0|~5.0",
+    "phpunit/phpunit": "~4.0",
     "fzaninotto/faker": "~1.5.0",
-    "fabpot/php-cs-fixer": "~1.10",
+    "friendsofphp/php-cs-fixer": "~1.10",
     "squizlabs/php_codesniffer": "2.*",
     "satooshi/php-coveralls": "1.*"
   },
