--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ php:
   - '5.5'
   - '5.6'
   - '7.0'
+  - '7.1'
   - hhvm
   - nightly
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - php: nightly
 
 env:
   global:
