--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0",
+    "composer/composer": "1.0.*@dev",
+    "phpunit/phpunit": "4.1.*",
     "fzaninotto/faker": "~1.5.0",
     "friendsofphp/php-cs-fixer": "~1.10",
     "squizlabs/php_codesniffer": "2.*",
