--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ php:
   - '5.6'
   - '7.0'
   - '7.1'
+  - '7.2'
   - hhvm
   - nightly
 
@@ -13,6 +14,7 @@ matrix:
   fast_finish: true
   allow_failures:
     - php: 5.4
+    - php: 5.5
 
 env:
   global:
