--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,14 @@
     "ext-curl": "*"
   },
   "require-dev": {
-    "composer/composer": "1.0.*@dev",
-    "phpunit/phpunit": "4.1.*",
-    "fzaninotto/faker": "~1.5.0",
-    "friendsofphp/php-cs-fixer": "~1.10",
-    "squizlabs/php_codesniffer": "2.*",
-    "satooshi/php-coveralls": "1.*"
+    "php": ">=7.0",
+    "ext-mbstring": "*",
+    "composer/composer": "1.7.*@dev",
+    "phpunit/phpunit": "7.1.*",
+    "fzaninotto/faker": "~1.7.1",
+    "friendsofphp/php-cs-fixer": "~2.11",
+    "squizlabs/php_codesniffer": "3.*",
+    "satooshi/php-coveralls": "2.*"
   },
   "autoload": {
     "psr-4": {
