--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ php:
   - '7.0'
   - '7.1'
   - '7.2'
+  - '7.3'
   - hhvm
   - nightly
 
@@ -15,6 +16,7 @@ matrix:
   allow_failures:
     - php: 5.4
     - php: 5.5
+    - php: 5.6
 
 env:
   global:
