--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,11 @@
     "php": ">=7.0",
     "ext-mbstring": "*",
     "composer/composer": "1.7.*@dev",
-    "phpunit/phpunit": "7.1.*",
+    "phpunit/phpunit": "6.*",
     "fzaninotto/faker": "~1.7.1",
     "friendsofphp/php-cs-fixer": "~2.11",
     "squizlabs/php_codesniffer": "3.*",
-    "satooshi/php-coveralls": "2.*"
+    "php-coveralls/php-coveralls": "2.1.*"
   },
   "autoload": {
     "psr-4": {
