Renamed salt to secret.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,8 +13,8 @@
          syntaxCheck="false">
 
     <php>
-        <!-- Specify the value of your BigBlueButton security salt -->
-        <env name="BBB_SECURITY_SALT" value="8cd8ef52e8e101574e400365b55e11a6"/>
+        <!-- Specify the value of your BigBlueButton secret -->
+        <env name="BBB_SECRET" value="8cd8ef52e8e101574e400365b55e11a6"/>
         <!-- Specify the Server Base URL of your BigBlueButton -->
         <env name="BBB_SERVER_BASE_URL" value="http://test-install.blindsidenetworks.com/bigbluebutton/"/>
     </php>
