--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
   },
   "require": {
     "php": ">=5.4",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-simplexml": "*",
+    "ext-mbstring": "*"
   },
   "require-dev": {
     "php": ">=7.0",
