Added userdata property to CreateMeetingParameters

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,7 +16,7 @@
         <!-- Specify the value of your BigBlueButton secret -->
         <env name="BBB_SECRET" value="8cd8ef52e8e101574e400365b55e11a6"/>
         <!-- Specify the Server Base URL of your BigBlueButton -->
-        <env name="BBB_SERVER_BASE_URL" value="http://test-install.blindsidenetworks.com/bigbluebutton/"/>
+        <env name="BBB_SERVER_BASE_URL" value="https://test-install.blindsidenetworks.com/bigbluebutton/"/>
     </php>
 
     <log type="coverage-html" target="./coverage"
