add integration tests

--- a/phpunit-integration.xml.dist
+++ b/phpunit-integration.xml.dist
@@ -23,7 +23,7 @@
 
     <testsuites>
         <testsuite name="BigBlueButton test suit">
-            <directory>./tests/unit/</directory>
+            <directory>./tests/integration/</directory>
         </testsuite>
     </testsuites>
 
