--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,12 @@
     }
   },
   "require": {
-    "php": ">=5.4",
+    "php": "^7.2",
     "ext-curl": "*",
     "ext-simplexml": "*",
     "ext-mbstring": "*"
   },
   "require-dev": {
-    "php": ">=7.0",
-    "ext-mbstring": "*",
     "composer/composer": "1.7.*@dev",
     "phpunit/phpunit": "6.*",
     "fzaninotto/faker": "~1.8.0",
