--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,11 +9,7 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          processIsolation="false"
-         stopOnFailure="false"
-         syntaxCheck="false">
-
-    <log type="coverage-html" target="./coverage"
-         charset='UTF-8' yui='true'/>
+         stopOnFailure="false">
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
