--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   },
   "require-dev": {
     "composer/composer": "^1.10.0",
-    "phpunit/phpunit": "~9.1.0",
+    "phpunit/phpunit": "^8",
     "fzaninotto/faker": "~1.9.0",
     "friendsofphp/php-cs-fixer": "2.*",
     "squizlabs/php_codesniffer": "3.*",
