add Klaus as author

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,11 @@
       "name": "Ghazi Triki",
       "email": "ghazi.nocturne@gmail.com",
       "role": "Developer"
+    },
+    {
+      "name": "Klaus Herberth",
+      "email": "klaus@jsxc.org",
+      "role": "Developer"
     }
   ],
   "repositories": {
