--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
       "name": "Klaus Herberth",
       "email": "klaus@jsxc.org",
       "role": "Developer"
+    },
+    {
+      "name": "Samuel Weirich",
+      "email": "samuel@coding-space.de",
+      "role": "Developer"
     }
   ],
   "repositories": {
