--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,11 @@
       "name": "Samuel Weirich",
       "email": "samuel@coding-space.de",
       "role": "Developer"
+    },
+    {
+      "name": "Jignesh Joisar",
+      "email": "jigneshjoisar@gmail.com",
+      "role": "Developer"
     }
   ],
   "repositories": {
