--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,11 @@
       "name": "Jignesh Joisar",
       "email": "jigneshjoisar@gmail.com",
       "role": "Developer"
+    },
+    {
+      "name": "Pablo Ogando",
+      "email": "pablo.ogando@teltek.es",
+      "role": "Developer"
     }
   ],
   "repositories": {
