Get recording text tracks (#26)
* support 7.4 and fix-dependency

* php cs fixer code

* Make processXmlResponse more generic

* CS Fix

* add php json support to composer

* Rename and refactor processResponse

Co-authored-by: Samuel Weirich <samuel.weirich@gmx.de>

--- a/composer.json
+++ b/composer.json
@@ -56,7 +56,8 @@
     "php": "^7.2",
     "ext-curl": "*",
     "ext-simplexml": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "ext-json": "*"
   },
   "require-dev": {
     "composer/composer": "^1.10.0",
