--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "api"
   ],
   "homepage": "http://bigbluebutton.org/",
-  "license": "LGPL-3.0-only",
+  "license": "LGPL-3.0-or-later",
   "authors": [
     {
       "name": "Ghazi Triki",
