--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,13 @@
     "ext-mbstring": "*",
     "ext-json": "*"
   },
+  "suggest": {
+    "psr/http-client-implementation": "To use the PsrHttpClientTransport.",
+    "psr/http-factory-implementation": "To use the PsrHttpClientTransport.",
+    "psr/http-message": "To use the PsrClientHttpTransport.",
+    "symfony/http-client-contracts": "To use the SymfonyHttpClientTransport.",
+    "symfony/http-client": "To use the SymfonyHttpClientTransport."
+  },
   "require-dev": {
     "composer/composer": "^1.10.0",
     "phpunit/phpunit": "^8",
@@ -67,11 +74,18 @@
     "squizlabs/php_codesniffer": "3.*",
     "php-coveralls/php-coveralls": "~2.2.0",
     "brainmaestro/composer-git-hooks": "^2.8",
-    "vimeo/psalm": "^4.5"
+    "vimeo/psalm": "^4.5",
+    "psr/http-client": "^1.0",
+    "psr/http-factory": "^1.0",
+    "psr/http-message": "^1.0",
+    "symfony/http-client-contracts": "^1.1|^2.0",
+    "symfony/http-client": "^4.4|^5.0",
+    "symfony/process": "^3.4|^4.0|^5.0",
+    "nyholm/psr7": "^1.4"
   },
   "autoload": {
     "psr-4": {
-      "BigBlueButton\\": "src"
+      "BigBlueButton\\": ["src", "tests/integration"]
     }
   },
   "scripts": {
