Fix coveralls pr (#65)
* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

Co-authored-by: Klaus <klaus@jsxc.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,9 +45,9 @@ jobs:
       run: vendor/bin/phpunit
       continue-on-error: true
     - name: Coveralls
-      if: matrix.php-versions == '7.2'
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+      if: ${{ matrix.php-versions == '7.2' && env.COVERALLS_REPO_TOKEN != null }}
       run: vendor/bin/php-coveralls --coverage_clover=build/logs/coverage.xml -v
 
 
