--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,11 @@
       "name": "Alfonso Rodríguez",
       "email": "arodriguez@teltek.es",
       "role": "Developer"
+    },
+    {
+      "name": "Felix Jacobi",
+      "email": "felix@jacobi-hamburg.net",
+      "role": "Developer"
     }
   ],
   "repositories": {
@@ -78,6 +83,7 @@
     "psr/http-client": "^1.0",
     "psr/http-factory": "^1.0",
     "psr/http-message": "^1.0",
+    "symfony/dotenv": "^3.4|^4.0|^5.0",
     "symfony/http-client-contracts": "^1.1|^2.0",
     "symfony/http-client": "^4.4|^5.0",
     "symfony/process": "^3.4|^4.0|^5.0",
