--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
     "docs": "https://github.com/littleredbutton/bigbluebutton-api-php/blob/master/README.md"
   },
   "require": {
-    "php": "^7.2",
+    "php": ">=7.2",
     "ext-curl": "*",
     "ext-simplexml": "*",
     "ext-mbstring": "*",
@@ -74,10 +74,9 @@
   "require-dev": {
     "composer/composer": "^1.10.0",
     "phpunit/phpunit": "^8",
-    "fzaninotto/faker": "~1.9.0",
     "friendsofphp/php-cs-fixer": "2.*",
     "squizlabs/php_codesniffer": "3.*",
-    "php-coveralls/php-coveralls": "~2.2.0",
+    "php-coveralls/php-coveralls": "^2.4.0",
     "brainmaestro/composer-git-hooks": "^2.8",
     "vimeo/psalm": "^4.5",
     "psr/http-client": "^1.0",
@@ -87,7 +86,8 @@
     "symfony/http-client-contracts": "^1.1|^2.0",
     "symfony/http-client": "^4.4|^5.0",
     "symfony/process": "^3.4|^4.0|^5.0",
-    "nyholm/psr7": "^1.4"
+    "nyholm/psr7": "^1.4",
+    "fakerphp/faker": "^1.14"
   },
   "autoload": {
     "psr-4": {
