--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,10 +39,10 @@ jobs:
       if: ${{ !matrix.experimental }}
       run: |
         mkdir -p build/logs
-        vendor/bin/phpunit --coverage-clover=build/logs/coverage.xml
+        vendor/bin/phpunit --coverage-clover=build/logs/coverage.xml --testsuite="BigBlueButton test suite"
     - name: Execute tests without coverage
       if: ${{ matrix.experimental }}
-      run: vendor/bin/phpunit
+      run: vendor/bin/phpunit --testsuite="BigBlueButton test suite"
       continue-on-error: true
     - name: Coveralls
       env:
