Fixed cookie extraction in CurlTransport in PHP 8 (fixes #76)
Moved getHeadersAndContentFromCurlHandle to CurlTransport as it not usuable and testable as standalone util

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ composer.phar
 .php_cs.cache
 cghooks.lock
 
+# PHPUnit reports (for convenience when working locally)
+reports
+
+# PHPUnit result cache
 .phpunit.result.cache
 
 # Local environment variables
