--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,33 @@ on:
   pull_request:
 
 jobs:
+  PHP_Lowest:
+    name: PHP wth lowest dependencies
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        php-versions: ['7.2']
+        experimental: [false]
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Setup PHP, with composer and extensions
+      uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
+      with:
+        php-version: ${{ matrix.php-versions }}
+        extensions: bcmath, ctype, fileinfo, json, mbstring, dom, ldap, pdo, tokenizer, xml, mysql, sqlite
+        coverage: xdebug
+    - name: Downgrade phpunit for php7.2
+      run: composer update phpunit/phpunit -W
+    - name: Update to lowest php dependencies
+      run: composer update --prefer-lowest
+    - name: Install php dependencies
+      run: composer install --dev --no-interaction
+    - name: Execute tests without coverage
+      run: vendor/bin/phpunit --testsuite="BigBlueButton test suite"
+   
   PHP:
     name: PHP ${{ matrix.php-versions }}
     runs-on: ubuntu-latest
