--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "api"
   ],
   "homepage": "http://bigbluebutton.org/",
-  "license": "GPL-3.0",
+  "license": "LGPL-3.0-or-later",
   "authors": [
     {
       "name": "Ghazi Triki",
@@ -23,20 +23,20 @@
     }
   },
   "require": {
-    "php": ">=5.4",
+    "php": ">=7.0",
     "ext-curl": "*",
     "ext-simplexml": "*",
     "ext-mbstring": "*"
   },
   "require-dev": {
-    "php": ">=7.0",
+    "php": ">=8.0",
     "ext-mbstring": "*",
-    "composer/composer": "1.7.*@dev",
-    "phpunit/phpunit": "6.*",
-    "fzaninotto/faker": "~1.8.0",
+    "composer/composer": "^1.10.0",
+    "phpunit/phpunit": "^8",
+    "fakerphp/faker": "^1.14",
     "friendsofphp/php-cs-fixer": "2.*",
     "squizlabs/php_codesniffer": "3.*",
-    "php-coveralls/php-coveralls": "2.1.*"
+    "php-coveralls/php-coveralls": "^2.4.0"
   },
   "autoload": {
     "psr-4": {
