--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       continue-on-error: true
     - name: Coveralls
       env:
-        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+        COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       if: ${{ matrix.php-versions == '7.2' && env.COVERALLS_REPO_TOKEN != null }}
       run: vendor/bin/php-coveralls --coverage_clover=build/logs/coverage.xml -v
 
