--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "authors": [
     {
       "name": "Ghazi Triki",
-      "email": "ghazi.nocturne@gmail.com",
+      "email": "ghazi.triki@riadvice.tn",
       "role": "Developer"
     }
   ],
@@ -30,12 +30,15 @@
   },
   "require-dev": {
     "ext-mbstring": "*",
-    "composer/composer": "^1.10.0",
-    "phpunit/phpunit": "^8",
-    "fakerphp/faker": "^1.14",
-    "friendsofphp/php-cs-fixer": "2.*",
-    "squizlabs/php_codesniffer": "3.*",
-    "php-coveralls/php-coveralls": "^2.4.0"
+    "composer/composer": "^1.10.24",
+    "phpunit/phpunit": "^8.5",
+    "fakerphp/faker": "^1.17",
+    "friendsofphp/php-cs-fixer": "^2.19",
+    "squizlabs/php_codesniffer": "^3.6",
+    "php-coveralls/php-coveralls": "^2.5.2"
+  },
+  "options": {
+    "symlink": false
   },
   "autoload": {
     "psr-4": {
