--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "authors": [
     {
       "name": "Ghazi Triki",
-      "email": "ghazi.triki@riadvice.tn",
+      "email": "ghazi.nocturne@gmail.com",
       "role": "Developer"
     },
     {
