--- a/composer.json
+++ b/composer.json
@@ -26,15 +26,19 @@
     "php": ">=7.1",
     "ext-curl": "*",
     "ext-simplexml": "*",
-    "ext-mbstring": "*"
+    "ext-mbstring": "*",
+    "marc-mabe/php-enum": "^4.7"
   },
   "require-dev": {
-    "ext-mbstring": "*",
     "phpunit/phpunit": "^8.5",
     "fakerphp/faker": "^1.17",
     "friendsofphp/php-cs-fixer": "^3.8.0",
     "squizlabs/php_codesniffer": "^3.7",
     "php-coveralls/php-coveralls": "^2.5.2"
+  },
+  "scripts": {
+    "test": "./vendor/bin/phpunit",
+    "cs-fix": "./vendor/bin/php-cs-fixer fix --allow-risky yes"
   },
   "options": {
     "symlink": false
@@ -42,6 +46,14 @@
   "autoload": {
     "psr-4": {
       "BigBlueButton\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "BigBlueButton\\": [
+        "src",
+        "tests"
+      ]
     }
   }
 }
