--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -18,8 +18,9 @@
         <env name="BBB_SERVER_BASE_URL" value="https://test-install.blindsidenetworks.com/bigbluebutton/"/>
     </php>
 
-    <log type="coverage-html" target="./coverage"
-         charset='UTF-8' yui='true'/>
+    <logging>
+        <log type="coverage-html" target="./coverage"/>
+    </logging>
 
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
