--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "marc-mabe/php-enum": "^4.7"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
+    "phpunit/phpunit": "^9.5",
     "fakerphp/faker": "^1.17",
     "friendsofphp/php-cs-fixer": "^3.8.0",
     "squizlabs/php_codesniffer": "^3.7",
@@ -38,6 +38,7 @@
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
+    "test-cov": "./vendor/bin/phpunit --coverage-html coverage",
     "cs-fix": "./vendor/bin/php-cs-fixer fix --allow-risky yes"
   },
   "options": {
