--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,23 @@
     "phpunit/phpunit": "^9.5",
     "fakerphp/faker": "^1.17",
     "friendsofphp/php-cs-fixer": "^3.9.2",
-    "squizlabs/php_codesniffer": "^3.7.1"
+    "squizlabs/php_codesniffer": "^3.7.1",
+    "phploc/phploc": "^7.0.2",
+    "nunomaduro/phpinsights": "^v2.4.0",
+    "bmitch/churn-php": "^1.7",
+    "phpmetrics/phpmetrics": "^v2.8.1",
+    "wapmorgan/php-deprecation-detector": "^2.0"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
-    "test-cov": "./vendor/bin/phpunit --coverage-html coverage",
-    "cs-fix": "./vendor/bin/php-cs-fixer fix --allow-risky yes"
+    "test-cov": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-html coverage",
+    "cs-fix": "./vendor/bin/php-cs-fixer fix --allow-risky yes",
+    "sniffer": "./vendor/bin/phpcs src/",
+    "phploc": "./vendor/bin/phploc src/",
+    "phpinsights": "./vendor/bin/phpinsights",
+    "phpdd": "./vendor/bin/phpdd --target 7.4 src/",
+    "phpmetrics": "./vendor/bin/phpmetrics --report-html=metrics src/",
+    "churn": "./vendor/bin/churn run src/"
   },
   "options": {
     "symlink": false
@@ -54,6 +65,11 @@
         "src",
         "tests"
       ]
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
 }
