--- a/composer.json
+++ b/composer.json
@@ -31,19 +31,19 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "fakerphp/faker": "^1.17",
-    "friendsofphp/php-cs-fixer": "^3.9.2",
+    "fakerphp/faker": "^1.21",
+    "friendsofphp/php-cs-fixer": "^3.13.2",
     "squizlabs/php_codesniffer": "^3.7.1",
     "phploc/phploc": "^7.0.2",
-    "nunomaduro/phpinsights": "^v2.4.0",
-    "bmitch/churn-php": "^1.7",
-    "phpmetrics/phpmetrics": "^v2.8.1",
+    "nunomaduro/phpinsights": "^v2.6.1",
+    "bmitch/churn-php": "^1.7.1",
+    "phpmetrics/phpmetrics": "^v2.8",
     "wapmorgan/php-deprecation-detector": "^2.0"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
     "test-cov": "XDEBUG_MODE=coverage ./vendor/bin/phpunit --coverage-html coverage",
-    "cs-fix": "./vendor/bin/php-cs-fixer fix --allow-risky yes",
+    "cs-fix": "PHP_CS_FIXER_IGNORE_ENV=1 ./vendor/bin/php-cs-fixer fix --allow-risky yes",
     "sniffer": "./vendor/bin/phpcs src/",
     "phploc": "./vendor/bin/phploc src/",
     "phpinsights": "./vendor/bin/phpinsights",
