--- a/composer.json
+++ b/composer.json
@@ -27,18 +27,18 @@
     "ext-curl": "*",
     "ext-simplexml": "*",
     "ext-mbstring": "*",
-    "marc-mabe/php-enum": "^4.7.0"
+    "marc-mabe/php-enum": "^v4.7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.6.4",
-    "fakerphp/faker": "^1.21",
-    "friendsofphp/php-cs-fixer": "^3.13.4",
+    "phpunit/phpunit": "^9.6.8",
+    "fakerphp/faker": "^v1.22.0",
+    "friendsofphp/php-cs-fixer": "^v3.16.0",
     "squizlabs/php_codesniffer": "^3.7.2",
     "phploc/phploc": "^7.0.2",
     "nunomaduro/phpinsights": "^v2.7.0",
     "bmitch/churn-php": "^1.7.1",
     "phpmetrics/phpmetrics": "^v2.8.1",
-    "wapmorgan/php-deprecation-detector": "^2.0.29"
+    "wapmorgan/php-deprecation-detector": "^2.0.33"
   },
   "scripts": {
     "test": "./vendor/bin/phpunit",
