Improve code to phpstan level 6

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "ext-curl": "*",
     "ext-simplexml": "*",
     "ext-mbstring": "*",
+    "ext-json": "*",
     "marc-mabe/php-enum": "^v4.7.0"
   },
   "require-dev": {
