--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     "phpmetrics/phpmetrics": "^v2.8.2",
     "wapmorgan/php-deprecation-detector": "^2.0.33",
     "phpstan/phpstan": "^1.10",
-    "tracy/tracy": "^2.10"
+    "tracy/tracy": "^2.10",
+    "vlucas/phpdotenv": "^5.6"
   },
   "scripts": {
     "code-check": "./vendor/bin/phpstan analyse",
