--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     "phpmetrics/phpmetrics": "^v2.8.2",
     "wapmorgan/php-deprecation-detector": "^2.0.33",
     "phpstan/phpstan": "^1.10",
-    "tracy/tracy": "^2.10",
+    "tracy/tracy": "2.9",
     "vlucas/phpdotenv": "^5.6"
   },
   "scripts": {
