--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,16 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" backupStaticAttributes="false" bootstrap="./tests/bootstrap.php" colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" processIsolation="false" stopOnFailure="false" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+        bootstrap="./tests/bootstrap.php"
+        backupGlobals="false"
+        backupStaticAttributes="false"
+        colors="true"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        convertDeprecationsToExceptions="true"
+        processIsolation="false"
+        stopOnFailure="false"
+        verbose="true"
+>
   <coverage processUncoveredFiles="true">
     <include>
-      <directory suffix=".php">./src/</directory>
+      <directory suffix=".php">src</directory>
     </include>
+    <report>
+      <html outputDirectory="./var/coverage/" />
+    </report>
   </coverage>
   <php>
     <env name="XDEBUG_MODE" value="coverage"/>
   </php>
   <testsuites>
     <testsuite name="BigBlueButton test suite">
-      <directory>./tests/</directory>
+      <directory>tests</directory>
     </testsuite>
   </testsuites>
 </phpunit>
